# nfc-rfid-bricklet

./: .gitignore  README.rst
hardware/: LICENSE.txt  nfc-rfid.kicad_pcb  (+4 more)
software/: CMakeLists.txt  Makefile  changelog  generate_makefile  generate_makefile.bat
software/examples/c/: example_scan_for_tags.c  example_write_read_type2.c
software/examples/csharp/: ExampleScanForTags.cs  ExampleWriteReadType2.cs
software/examples/delphi/: ExampleScanForTags.pas  ExampleWriteReadType2.pas
software/examples/go/: example_scan_for_tags.go  example_write_read_type2.go
software/examples/java/: ExampleScanForTags.java  ExampleWriteReadType2.java
software/examples/javascript/: ExampleScanForTags.html  ExampleScanForTags.js  ExampleWriteReadType2.html  ExampleWriteReadType2.js
software/examples/labview/: Example Scan For Tags - StateChanged Callback.vi  Example Scan For Tags.vi  Example Write Read Type 2 - StateChanged Callback.vi  Example Write Read Type 2.vi
software/examples/mathematica/: ExampleScanForTags.nb  ExampleScanForTags.nb.txt  ExampleWriteReadType2.nb  ExampleWriteReadType2.nb.txt
software/examples/matlab/: matlab_example_scan_for_tags.m  matlab_example_write_read_type2.m  octave_example_scan_for_tags.m  octave_example_write_read_type2.m
software/examples/mqtt/: example-scan-for-tags.txt
software/examples/openhab/: ExampleScanForTags.rules
software/examples/perl/: example_scan_for_tags.pl  example_write_read_type2.pl
software/examples/php/: ExampleScanForTags.php  ExampleWriteReadType2.php
software/src/: config.h  everything.c  nfc-rfid.c  nfc-rfid.h
(+14 files in other folders)
